--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,10 @@ DB_PASSWORD=your_database_password
 DB_DIALECT=postgres
 DB_SSL=false
 
+# Demo Data Seeding
+SEED_DEMO_DATA=true
+SEED_DEFAULT_PASSWORD=admin123
+
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-change-this-in-production
