fix: Ensure migrations and app use same database user in production
CRITICAL: Fixed database user configuration mismatch

Problem:
- Production .env template: DB_USER=hrm_app
- Database setup script: Creates user 'hrm_app'
- Application (models/index.js): Uses DB_USER from env (hrm_app)
- Migrations (config.json): Expected DATABASE_URL (NOT SET)

Solution:
1. Convert config/config.json to config.js (loads env vars via dotenv)
2. Update .sequelizerc to point to config.js
3. Now migrations read DB_USER, DB_PASSWORD from .env
4. Both app and migrations use same user: hrm_app

Production deployment:
- Database: Creates hrm_app user
- .env: Sets DB_USER=hrm_app, DB_PASSWORD=(from .db_password)
- Migrations: Read from .env, connect as hrm_app
- Application: Read from .env, connect as hrm_app

Tested:
 Development mode: Uses DB_USER from .env (hrm_admin locally)
 Production mode: Uses DB_USER from .env (hrm_app in prod)
 Backward compatible: config.json kept for reference

Related: #migration-user-consistency

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -24,14 +24,18 @@
     "logging": false
   },
   "production": {
-    "use_env_variable": "DATABASE_URL",
+    "username": "hrm_app",
+    "password": null,
+    "database": "skyraksys_hrm_prod",
+    "host": "localhost",
+    "port": 5432,
     "dialect": "postgres",
-    "dialectOptions": {
-      "ssl": {
-        "require": true,
-        "rejectUnauthorized": false
-      }
-    },
-    "logging": false
+    "logging": false,
+    "pool": {
+      "max": 10,
+      "min": 2,
+      "acquire": 60000,
+      "idle": 30000
+    }
   }
 }
