--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,8 +9,8 @@ PORT=8080
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=skyraksys_hrm
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
+DB_USER=hrm_app
+DB_PASSWORD=hrm_secure_2024
 DB_DIALECT=postgres
 DB_SSL=false
 
